syntax = "proto3";

package emailservice;

option go_package = "./";

service EmailService {
    rpc SendEmail (EmailRequest) returns (EmailResponse);
    rpc SendCodeEmail (EmailCodeRequest) returns (EmailResponse);
    rpc KldgaSendEmail (KldgaEmailRequest) returns (EmailResponse);
}

message EmailRequest {
    string email = 1;
    string createdAt = 2;
    string title = 3;
    string content = 4;
    string replyContent = 5;
    string replyCreatedAt = 6;
}

message EmailCodeRequest {
    string email = 1;
    string code = 2;
}

message EmailResponse {
    string status = 1;
}

message KldgaEmailRequest {
    string email = 1;
    string name = 2;
    string phone = 3;
    string content = 4;
}